<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="contact_police">CONTACT POLICE</string>
    <string name="new_crime">New Crime</string>
    <string name="camera_button_label">Camera</string>
</resources>